[GEOT-7958] replace String#formatted with String#format
To keep compatibility with JDK 11 the String#formatted method has been
replaced by String#format